@@ -1,4 +1,7 @@
-FROM openjdk:11-jre-slim as builder
+# Used eclipse-temurin instead of openjdk due to its deprecation
+# If you want, you can use amazoncorretto (remember, it's CentOS based :D)
+# or a newer version of openjdk (> 18)
+FROM eclipse-temurin:17-jre as builder
 
 ARG CEREBRO_VERSION=0.9.4
 
@@ -9,7 +12,7 @@ RUN  apt-get update \
   | tar xzv --strip-components 1 -C /opt/cerebro \
  && sed -i '/<appender-ref ref="FILE"\/>/d' /opt/cerebro/conf/logback.xml
 
-FROM openjdk:11-jre-slim
+FROM eclipse-temurin:17-jre
 
 COPY --from=builder /opt/cerebro /opt/cerebro
 
@@ -21,5 +24,8 @@ RUN addgroup -gid 1000 cerebro \
 
 WORKDIR /opt/cerebro
 USER cerebro
+
+# See https://github.com/lmenezes/cerebro/issues/514 for more information
+ENV JAVA_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.file=ALL-UNNAMED"
 
 ENTRYPOINT [ "/opt/cerebro/bin/cerebro" ]
